# UnFourier

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  MILESTONES.md  README.md  SASDYU3_val.md  TODO_M4.md  pipeline.md  todo_m5.md  todo_m6.md  todo_m8.md  unfourier.toml
Dev/: gen_debye.py  gen_sphere.py  monte_carlo_coverage.py  parse_gnom.py  plot_pr.py  spline_pr_tests.py  sweep_knot_density.py  sweep_noise.py  sweep_smoothness.py  validate_m5.py  validate_real_data.py  validate_spline.py
Dev/_real_validation_tmp/: unfourier.toml
docs/: fixing_boundary.md  saxs_ift_postmortem.md  todo_m7.md
docs2/: epic5_validation.md  spec_0p10.md  spec_0p9.md
src/: basis.rs  bspline.rs  config.rs  data.rs  guinier.rs  kernel.rs  lambda_select.rs  lib.rs  main.rs  nonneg.rs  output.rs  preprocess.rs  regularise.rs  solver.rs
tests/: guinier_cli.rs
